// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuyDockScreenScreen should render TransakIntro Component 1`] = `
<NativeBaseProvider
  initialWindowMetrics={
    Object {
      "frame": Object {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "insets": Object {
        "bottom": 0,
        "left": 0,
        "right": 0,
        "top": 0,
      },
    }
  }
>
  <TransakIntroView
    onPress={[MockFunction]}
  />
</NativeBaseProvider>
`;

exports[`BuyDockScreenScreen should render TransakProvider Webview 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <RNCWebView
    cacheEnabled={true}
    injectedJavaScriptBeforeContentLoadedForMainFrameOnly={true}
    injectedJavaScriptForMainFrameOnly={true}
    javaScriptEnabled={true}
    key="webViewKey"
    messagingEnabled={false}
    onContentProcessDidTerminate={[Function]}
    onHttpError={[Function]}
    onLoadingError={[Function]}
    onLoadingFinish={[Function]}
    onLoadingProgress={[Function]}
    onLoadingStart={[Function]}
    onMessage={[Function]}
    onShouldStartLoadWithRequest={[Function]}
    source={
      Object {
        "uri": "cryptoCurrencyCode=DOCK&partnerOrderId=fd1b4a14-f4be-4218-9e76-4aec9c00db69&walletAddress=3C7Hq5jQGxeYzL7LnVASn48tEfr6D7yKtNYSuXcgioQoWWsB",
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#ffffff",
        },
        undefined,
      ]
    }
    useSharedProcessPool={true}
  />
</View>
`;

exports[`BuyDockScreenScreen should render TransakProvider correctly 1`] = `
<NativeBaseProvider
  initialWindowMetrics={
    Object {
      "frame": Object {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "insets": Object {
        "bottom": 0,
        "left": 0,
        "right": 0,
        "top": 0,
      },
    }
  }
>
  <TransakPaymentProvider
    partnerOrderId="fd1b4a14-f4be-4218-9e76-4aec9c00db69"
    walletAddress="3C7Hq5jQGxeYzL7LnVASn48tEfr6D7yKtNYSuXcgioQoWWsB"
  />
</NativeBaseProvider>
`;

exports[`BuyDockScreenScreen should render correctly 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "backgroundColor": "#141417",
      "flex": 1,
    }
  }
  testID="BuyDockScreenScreen"
>
  <AppGlobalHeader />
  <Memo(ForwardRef(Box))
    flex={1}
  >
    <Memo(ForwardRef(Box))
      flex={1}
    >
      <TransakPaymentProvider
        partnerOrderId="fd1b4a14-f4be-4218-9e76-4aec9c00db69"
        walletAddress="3C7Hq5jQGxeYzL7LnVASn48tEfr6D7yKtNYSuXcgioQoWWsB"
      />
    </Memo(ForwardRef(Box))>
  </Memo(ForwardRef(Box))>
</RNCSafeAreaView>
`;
